--- a/gist.gradle
+++ b/gist.gradle
@@ -8,6 +8,11 @@ buildScan.background {
 void publishGist() {
     // For this to work, you need must specify this property in ~/.gradle/gradle.properties
     // TODO add a property for enabling/disabling this, as it takes a while
+    def isCapturingScan = !gradle.startParameter.offline && !gradle.startParameter.continuous
+    if (!isCapturingScan) {
+        gradle.rootProject.logger.warn("Build is offline or continuous. Not publishing gist.")
+    }
+    
     def hasGistCredentials = gradle.rootProject.hasProperty('gistToken')
     if (!hasGistCredentials) {
         gradle.rootProject.logger.warn("User has not set 'gistToken'. Cannot publish gist.")
@@ -31,8 +36,9 @@ void publishGist() {
                 }
                 createLink(content, buildScan)
             }
+            gradle.rootProject.logger.info('Successfully published gist.')
         } catch (ex) {
-            gradle.rootProject.logger.warn('Unable to publish diff to Gist', ex)
+            gradle.rootProject.logger.warn('Unable to publish gist', ex)
         }
     }
 }
