--- a/test/build.gradle
+++ b/test/build.gradle
@@ -25,7 +25,7 @@ apply from: '../basic-publishing.gradle'
 apply from: '../capture-task-input-files.gradle'
 apply from: '../tags-basic.gradle'
 apply from: '../tags-android.gradle'
-apply from: '../git.gradle'
+apply from: '../git-all.gradle'
 apply from: '../gist.gradle'
 
 // Put your gistToken, if you have one, in ~/.gradle/gradle.properties, and this will ensure that value gets into
