Split up basic-publishing.gradle into publishing-basic and publishing-ge.

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     }
 }
 
-apply from: '../basic-publishing.gradle'
+apply from: '../publishing-ge.gradle'
 apply from: '../capture-task-input-files.gradle'
 apply from: '../tags-basic.gradle'
 apply from: '../tags-android.gradle'
