Fix Eclipse-identifying sys prop instead of project prop

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -15,7 +15,7 @@ void tagIde() {
         buildScan.tag 'Android Studio'
     } else if (project.hasProperty('idea.executable')) {
         buildScan.tag 'IntelliJ IDEA'
-    } else if (project.hasProperty('eclipse.buildId')) {
+    } else if (System.getProperty('eclipse.buildId')) {
         buildScan.tag 'Eclipse'
     } 
 }
